--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,4 @@
 
-<div id="content" class="container">
-    <header id="content-header">
-        <div id="price-container">
-          <span class="glyphicon glyphicon-tag"></span><span class="price">$4.99</span>
-        </div>
-        <%= image_tag('header-image.jpg', id: 'content-header-img', alt: 'Learn Growth Hacking') %>
-    </header>
     <section id="content-details" class="row clearfix">
         <article id="details-article" class="col-sm-8">
             <h1 id="article-title">Growth Hacking <span class="font-weight-light">Crash Course</span></h1>
@@ -54,7 +47,8 @@ Made by <a href="http://onemonth.com" target="_blank"><%= image_tag('one-month-l
                 </p>
                 <p>Follow me on Twitter <a href="https://twitter.com/mattangriffel" target="_blank">@mattangriffel</a></p>
             </div>
-            <%= image_tag('teacher-image.jpg', id: 'modal-right', alt: 'Mattan Griffel') %>
+            <div id="modal-right" class="pull-right">
+            <%= image_tag('teacher-image.jpg', alt: 'Mattan Griffel') %>
             </div>
       </div>
       <div class="modal-footer">
@@ -62,9 +56,3 @@ Made by <a href="http://onemonth.com" target="_blank"><%= image_tag('one-month-l
       </div>
     </div>
   </div>
-</div>
-
-<!-- Scripts -->
-<script src="http://code.jquery.com/jquery-latest.min.js"></script>
-<script src="js/lib/bootstrap.min.js"></script>
-
